# gossip-farm-sim

./: .gitignore  Cargo.toml
assets/tiled_maps/csv/: gossip_farm_sim_v2_apple_tree_0.csv  gossip_farm_sim_v2_apple_tree_1.csv  gossip_farm_sim_v2_bushes.csv  gossip_farm_sim_v2_character_spawn_points.csv  gossip_farm_sim_v2_cow_spawn_points.csv  gossip_farm_sim_v2_dark_grass_patch.csv  gossip_farm_sim_v2_darker_grass_patch.csv  gossip_farm_sim_v2_fences.csv  gossip_farm_sim_v2_forest_details.csv  gossip_farm_sim_v2_forest_details_v2.csv  gossip_farm_sim_v2_ground.csv  gossip_farm_sim_v2_ramps_north.csv  gossip_farm_sim_v2_regular_tree_0.csv  gossip_farm_sim_v2_regular_tree_1.csv  gossip_farm_sim_v2_regular_tree_2.csv  gossip_farm_sim_v2_second_ground.csv  gossip_farm_sim_v2_soil.csv  gossip_farm_sim_v2_water.csv  gossip_farm_sim_v2_water_objects.csv  gossip_farm_sim_v2_wooden_house_base.csv  gossip_farm_sim_v2_wooden_house_chimney.csv  gossip_farm_sim_v2_wooden_house_floor.csv  gossip_farm_sim_v2_wooden_house_roof.csv
src/: main.rs
src/data/: csv_map_data.rs  mod.rs  player_data.rs  spawn_data.rs
src/gameplay/: components.rs  events.rs  mod.rs  systems.rs
src/gameplay/player/: components.rs  events.rs  mod.rs  systems.rs
src/gameplay/spritesheet/: components.rs  mod.rs  systems.rs
src/gameplay/state/: components.rs  mod.rs  systems.rs
src/gameplay/tile/: components.rs  mod.rs  systems.rs
src/helpers/: bindgen.rs
