[package]
name = "gossip-farm-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.4"
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
wasm-bindgen = "0.2.92"
